Fix language-picker z-index issue

--- a/css/content-block.scss
+++ b/css/content-block.scss
@@ -71,7 +71,7 @@
     height: calc(100vh - 150px);
     position: relative;
 
-    &:after {
+    &:before {
         content: '';
         position: absolute;
         top: 100px;
@@ -93,8 +93,6 @@
     
     .content-block {
         padding-top: 1.0em;
-        position: relative;
-        z-index: 1;
 
         @media (min-width: 740px) {
             padding-top: 5em;
